# remix-bff

./: .gitignore  config.toml  package-lock.json  package.json
api/: Cargo.toml  Settings.toml  build.sh
api/src/: auth.rs  handler.rs  main.rs  route.rs  todo.rs
frontend/: package-lock.json  package.json
frontend/app/: entry.server.tsx
frontend/app/routes/: _index.tsx  login.tsx  logout.tsx  oidc.callback.tsx  todos.tsx
frontend/app/services/: oidc.server.ts  session.ts
rauthy-config/: clients.json  config.toml
rauthy-scripts/: api_keys.json  client_registration.sh  encode_keys.sh
