[package]
name = "example-openapi-hello-world"
version = "0.1.0"
edition = "2021"

[alias]
build-with-config = "build && cp ./Settings.toml ./target/debug/Settings.toml"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
uuid = { version = "1.3.0", features = ["v4","serde"] }
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-axum = "0.1"
utoipa-swagger-ui = { version = "4.0", features = ["axum"] }
once_cell = "1.18.0"
reqwest = "0.12.22"
jsonwebtoken = "9.3.1"
jwks = "0.4.0"
config = "0.15.13"
